# JARVIS-Chatbot-a-simple-RAG-with-PDF-files

./: JARVIS Chatbot _ a simple RAG with PDF files.py  JARVIS_assistant.py  JARVIS_assistant_v01.py  JARVIS_chatbot_v01.py  JARVIS_chatbot_v0_1_0.py  JARVIS_chatbot_v0_1_1.py  JARVIS_chatbot_v0_1_2.py  README.md  pyproject.toml  requirements.txt  setup.py  simple_langchain_tools.py
jarvis/: custom_ui_style.py  db_helper.py  file_readers.py  get_model_list.py  grader.py  gui.py  gui_action.py  model_settings.py  parse_response_o1.py  prompts.py  react_agent.py  tools.py
jarvis_assistant/: JARVIS_assistant.py
jarvis_assistant/jarvis/: custom_ui_style.py  db_helper.py  grader.py  gui.py  gui_action.py  llms.py  model_settings.py  prompts.py  rewoo_agent.py  utils.py
